--- a/app.html
+++ b/app.html
@@ -4,6 +4,7 @@
 		<title></title>
 		<link rel=stylesheet href=app.css>
 		<script type="text/javascript" src="d3.v3.min.js" charset="utf-8"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	</head>
 	<body>
 		
