Show combobox with matchID's.
Former-commit-id: e5198efff6b3b54893a5ec4d025d4b5e75b81fdf

--- a/app.html
+++ b/app.html
@@ -17,6 +17,13 @@
 			 		<button id="btn_data" onclick="update_data()"></button>
 				</div>
    			</div>
+                        <div class="container">
+                                <div id="matchesbox">
+                                        match: 
+                                        <select id="matchBox" onchange="selectMatch()">
+                                        </select>
+                                </div>
+                        </div>
 		</div>
 		<div id="scatterplot">
    			<svg></svg>
@@ -63,7 +70,8 @@
 		</div>
    		</div>
 		
-		<script type="text/javascript" src="data/master-zones-1-0.js"></script>	
+		<!-- <script type="text/javascript" src="data/master-zones-1-0.js"></script> -->
+		<script type="text/javascript" src="data/matches.js"></script>	
 		<script type="text/javascript" src="setup.js"></script>
 		<!-- // <script type="text/javascript" src="scatterplot.js"></script> -->
 		<!-- // <script type="text/javascript" src="histogram.js"></script> -->
