--- a/app.html
+++ b/app.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="ISO-8859-1"> 
 <html>
 	<head>
 		<title></title>
@@ -20,7 +21,7 @@
                         <div class="container">
                                 <div id="matchesbox">
                                         match: 
-                                        <select id="matchBox" onchange="selectMatch()">
+                                        <select id="matchBox" onchange="select_match()">
                                         </select>
                                 </div>
                         </div>
@@ -70,7 +71,7 @@
 		</div>
    		</div>
 		
-		<!-- <script type="text/javascript" src="data/master-zones-1-0.js"></script> -->
+		<script type="text/javascript" src="data/master-zones-1-0.js" id="current_script"></script>
 		<script type="text/javascript" src="data/matches.js"></script>	
 		<script type="text/javascript" src="setup.js"></script>
 		<!-- // <script type="text/javascript" src="scatterplot.js"></script> -->
