--- a/app.html
+++ b/app.html
@@ -15,7 +15,6 @@
    			<div class="container">
    				<div id="geoUI">
 			 		<button id="btn_background" onclick="update_background()"></button>
-			 		<button id="btn_data" onclick="update_data()"></button>
 				</div>
    			</div>
                         <div class="container">
@@ -71,7 +70,7 @@
 		</div>
    		</div>
 		
-		<script type="text/javascript" src="data/master-zones-1-0.js" id="current_script"></script>
+		<script type="text/javascript" src="data/580607270.js" id="current_script"></script>
 		<script type="text/javascript" src="data/matches.js"></script>	
 		<script type="text/javascript" src="setup.js"></script>
 		<!-- // <script type="text/javascript" src="scatterplot.js"></script> -->
