--- a/app.html
+++ b/app.html
@@ -36,5 +36,6 @@
 		<script type="text/javascript" src="setupMap.js"></script>
 		<script type="text/javascript" src="geoplot.js"></script>
       	<script>resize();</script>
+      	<script>redraw(true);</script>
 	</body>
 </html>
