--- a/app.html
+++ b/app.html
@@ -16,9 +16,9 @@
 			<div id="scatterplot">
 	   			<svg></svg>
 	   		</div>
-	   		<div class="container">
+	   		<div class="container_2">
 	   			<div id="ui">
-	   				<div id="match selection">
+	   				<div id="match_selection">
 						tier: <select id="tierBox" onchange="select_tier()"></select>
 						match: <select id="matchBox" onchange="select_match()"></select> 
 						<br>
@@ -41,6 +41,6 @@
 		<script type="text/javascript" src="setupMap.js"></script>
 		<script type="text/javascript" src="geoplot.js"></script>
       	<script>resize();</script>
-      	<script>redraw(true);</script>
+      	<script>resize(true);</script>
 	</body>
 </html>
