--- a/app.html
+++ b/app.html
@@ -32,6 +32,7 @@
 							<input type="radio" name="visualization" value="traces" onchange="changeSelection('geoplot');" id="radio_geoplot" checked> player traces
 							<input type="radio" name="visualization" value="heatmap" onchange="changeSelection('heatmap');" id="radio_heatmap" > heat map
 						</form>
+						 <button type="button" onclick="run();" id="runButton">Start</button> 
 	                </div>
 	            </div>
 	        </div>
